use mgt api service

--- a/express_api_nextjs/server/.env
+++ b/express_api_nextjs/server/.env
@@ -2,3 +2,4 @@ MYSQL_HOST='127.0.0.1'
 MYSQL_USER='sa'
 MYSQL_PASSWORD='appsa'
 MYSQL_DATABASE='chalicedb'
+#ANONYMOUS_USER_SESSION_ID='6601508d-e7e0-4ed6-892b-879c834676af'
