--- a/express_api_nextjs/server/.env
+++ b/express_api_nextjs/server/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST='127.0.0.1'
-MYSQL_USER='sa'
-MYSQL_PASSWORD='appsa'
-MYSQL_DATABASE='chalicedb'
+MYSQL_HOST='aws-mysql-test.czmcyuycivxm.us-east-1.rds.amazonaws.com'
+MYSQL_USER='admin'
+MYSQL_PASSWORD='Aws!#$%rds'
+MYSQL_DATABASE='kiosk'
