--- a/express_api_nextjs/client/package.json
+++ b/express_api_nextjs/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --esm server.mts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
